Update application stylesheets

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,6 +66,12 @@ body, input, button {
   font-size: 16px;
 }
 
+.content form label span {
+  font-weight: normal;
+  color: #999;
+  font-size: 12px;
+}
+
 .content button.btn {
   border: 0;
   border-radius: 2px;
