--- a/frontend/src/pages/Dashboard/styles.css
+++ b/frontend/src/pages/Dashboard/styles.css
@@ -11,3 +11,28 @@ ul.spot-list li {
     display: flex;
     flex-direction: column;
 }
+
+ul.spot-list li header {
+    width: 100%;
+    height: 120px;
+    background-size: cover;
+    border-radius: 4px;
+}
+
+ul.spot-list li strong {
+    margin-top: 10px;
+    font-size: 24px;
+    color: #444;
+}
+
+ul.spot-list li span {
+    font-size: 15px;
+    color: #999;
+}
+
+label#thumbnail.has-thumbnail {
+    border: 0
+}
+label#thumbnail.has-thumbnail img{
+    display: none;
+}
