Stylesheet button accept/reject improvements

--- a/frontend/src/pages/Dashboard/styles.css
+++ b/frontend/src/pages/Dashboard/styles.css
@@ -53,6 +53,7 @@ ul.notifications li button {
     font-weight: bold;
     margin-top: 10px;
     cursor: pointer;
+    background: transparent;
 }
 
 ul.notifications li button.accept {
